# agent-tool-openproject-cli

./: AGENTS.md  Makefile  README.md  docker-compose.versiontest.yml  docker-compose.yml  pyproject.toml  rates.example.json
.github/workflows/: ci.yml  compat.yml  release.yml
docs/: API_NOTES.md  COMMANDS.md  USAGE.md
packaging/: op_launcher.py
scripts/: build_binary.sh  gen_docs.py  get_admin_token.sh  seed_test_data.rb  seed_test_data.sh
src/opcli/: __init__.py  __main__.py  cli.py  client.py  config.py  context.py  credentials.py  duration.py  errors.py  hal.py  output.py  resolve.py  searchspec.py  serialize.py  spec.py  wpfilters.py
src/opcli/commands/: __init__.py  _shared.py  attachments.py  auth.py  comments.py  context.py  costs.py  custom_fields.py  filelinks.py  guide.py  install.py  memberships.py  notifications.py  projects.py  raw.py  report.py  search.py  settings.py  time_entries.py  users.py  wiki.py  workpackages.py
tests/: conftest.py  support.py  test_attachments.py  test_client_retry.py  test_comments.py  test_config_unit.py  test_context.py  test_cost.py  test_credentials_unit.py  test_globals_unit.py  test_guide_unit.py  test_install_unit.py  test_issue_features_live.py  test_members_users.py  test_misc.py  test_more_integration.py  test_new_features_unit.py  test_output.py  test_output_render.py  test_projects.py  test_report_unit.py  test_search.py  test_search_features.py  test_searchspec_unit.py  test_serialize_unit.py  test_time.py  test_unit.py  test_workpackages.py  test_wpfilters_unit.py
