[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-tool-openproject-cli"
version = "0.3.0"
description = "Agent-ready command-line interface for OpenProject (work packages, projects, time, costs, search, and more). Installs the `openproject` command."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Zierhut IT" }, { name = "Alexander Zierhut" }]
keywords = [
    "openproject", "cli", "command-line", "openproject-api", "work-packages",
    "time-tracking", "project-management", "ai-agent", "llm", "automation", "invoicing",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Bug Tracking",
    "Topic :: Utilities",
]
dependencies = [
    "typer>=0.12",
    "httpx>=0.27",
    "keyring>=25",
    "rich>=13",
    "python-dateutil>=2.9",
]

[project.optional-dependencies]
test = [
    "pytest>=8",
    "pytest-timeout>=2.3",
]
build = [
    "pyinstaller>=6",
]

[project.urls]
Homepage = "https://github.com/alexander-zierhut/agent-tool-openproject-cli"
Repository = "https://github.com/alexander-zierhut/agent-tool-openproject-cli"
Issues = "https://github.com/alexander-zierhut/agent-tool-openproject-cli/issues"
Changelog = "https://github.com/alexander-zierhut/agent-tool-openproject-cli/releases"

[project.scripts]
# Only `openproject` — the short name `op` is intentionally NOT claimed to avoid
# colliding with other tools that use it (e.g. an existing OpenProject/1Password
# CLI). Add your own alias if you want a shorter command.
openproject = "opcli.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q"
markers = [
    "integration: talks to a live OpenProject instance (requires OPCLI_BASE_URL + OPCLI_TOKEN)",
]
timeout = 120
